// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Buttons/IconButton Disabled 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
    <div class=\\"d-inline-block p-3\\" style=",
    ">
      <button
        type=\\"button\\"
        ?disabled=",
    "
        class=",
    "
      >
        <span class=\\"material-icons ",
    "\\">",
    "</span>
        ",
    "
      </button>
    </div>
  ",
  ],
  "values": Array [
    "",
    true,
    "btn btn-icon   ",
    "",
    "close",
    "",
  ],
}
`;

exports[`Storyshots Components/Buttons/IconButton Disabled Inverse 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
    <div class=\\"d-inline-block p-3\\" style=",
    ">
      <button
        type=\\"button\\"
        ?disabled=",
    "
        class=",
    "
      >
        <span class=\\"material-icons ",
    "\\">",
    "</span>
        ",
    "
      </button>
    </div>
  ",
  ],
  "values": Array [
    "background-color:#27251F",
    true,
    "btn btn-icon   inverse",
    "",
    "close",
    "",
  ],
}
`;

exports[`Storyshots Components/Buttons/IconButton Disabled Inverse With Horizontal Text 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
    <div class=\\"d-inline-block p-3\\" style=",
    ">
      <button
        type=\\"button\\"
        ?disabled=",
    "
        class=",
    "
      >
        <span class=\\"material-icons ",
    "\\">",
    "</span>
        ",
    "
      </button>
    </div>
  ",
  ],
  "values": Array [
    "background-color:#27251F",
    true,
    "btn btn-icon btn-icon-w-text horizontal inverse",
    "me-1",
    "edit",
    "Edit",
  ],
}
`;

exports[`Storyshots Components/Buttons/IconButton Disabled Inverse With Text 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
    <div class=\\"d-inline-block p-3\\" style=",
    ">
      <button
        type=\\"button\\"
        ?disabled=",
    "
        class=",
    "
      >
        <span class=\\"material-icons ",
    "\\">",
    "</span>
        ",
    "
      </button>
    </div>
  ",
  ],
  "values": Array [
    "background-color:#27251F",
    true,
    "btn btn-icon btn-icon-w-text  inverse",
    "",
    "edit",
    "Edit",
  ],
}
`;

exports[`Storyshots Components/Buttons/IconButton Disabled With Horizontal Text 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
    <div class=\\"d-inline-block p-3\\" style=",
    ">
      <button
        type=\\"button\\"
        ?disabled=",
    "
        class=",
    "
      >
        <span class=\\"material-icons ",
    "\\">",
    "</span>
        ",
    "
      </button>
    </div>
  ",
  ],
  "values": Array [
    "",
    true,
    "btn btn-icon btn-icon-w-text horizontal ",
    "me-1",
    "edit",
    "Edit",
  ],
}
`;

exports[`Storyshots Components/Buttons/IconButton Disabled With Text 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
    <div class=\\"d-inline-block p-3\\" style=",
    ">
      <button
        type=\\"button\\"
        ?disabled=",
    "
        class=",
    "
      >
        <span class=\\"material-icons ",
    "\\">",
    "</span>
        ",
    "
      </button>
    </div>
  ",
  ],
  "values": Array [
    "",
    true,
    "btn btn-icon btn-icon-w-text  ",
    "",
    "edit",
    "Edit",
  ],
}
`;

exports[`Storyshots Components/Buttons/IconButton Inverse 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
    <div class=\\"d-inline-block p-3\\" style=",
    ">
      <button
        type=\\"button\\"
        ?disabled=",
    "
        class=",
    "
      >
        <span class=\\"material-icons ",
    "\\">",
    "</span>
        ",
    "
      </button>
    </div>
  ",
  ],
  "values": Array [
    "background-color:#27251F",
    false,
    "btn btn-icon   inverse",
    "",
    "close",
    "",
  ],
}
`;

exports[`Storyshots Components/Buttons/IconButton Inverse With Horizontal Text 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
    <div class=\\"d-inline-block p-3\\" style=",
    ">
      <button
        type=\\"button\\"
        ?disabled=",
    "
        class=",
    "
      >
        <span class=\\"material-icons ",
    "\\">",
    "</span>
        ",
    "
      </button>
    </div>
  ",
  ],
  "values": Array [
    "background-color:#27251F",
    false,
    "btn btn-icon btn-icon-w-text horizontal inverse",
    "me-1",
    "edit",
    "Edit",
  ],
}
`;

exports[`Storyshots Components/Buttons/IconButton Inverse With Text 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
    <div class=\\"d-inline-block p-3\\" style=",
    ">
      <button
        type=\\"button\\"
        ?disabled=",
    "
        class=",
    "
      >
        <span class=\\"material-icons ",
    "\\">",
    "</span>
        ",
    "
      </button>
    </div>
  ",
  ],
  "values": Array [
    "background-color:#27251F",
    false,
    "btn btn-icon btn-icon-w-text  inverse",
    "",
    "edit",
    "Edit",
  ],
}
`;

exports[`Storyshots Components/Buttons/IconButton Standard 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
    <div class=\\"d-inline-block p-3\\" style=",
    ">
      <button
        type=\\"button\\"
        ?disabled=",
    "
        class=",
    "
      >
        <span class=\\"material-icons ",
    "\\">",
    "</span>
        ",
    "
      </button>
    </div>
  ",
  ],
  "values": Array [
    "",
    false,
    "btn btn-icon   ",
    "",
    "close",
    "",
  ],
}
`;

exports[`Storyshots Components/Buttons/IconButton Standard With Horizontal Text 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
    <div class=\\"d-inline-block p-3\\" style=",
    ">
      <button
        type=\\"button\\"
        ?disabled=",
    "
        class=",
    "
      >
        <span class=\\"material-icons ",
    "\\">",
    "</span>
        ",
    "
      </button>
    </div>
  ",
  ],
  "values": Array [
    "",
    false,
    "btn btn-icon btn-icon-w-text horizontal ",
    "me-1",
    "edit",
    "Edit",
  ],
}
`;

exports[`Storyshots Components/Buttons/IconButton Standard With Text 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
    <div class=\\"d-inline-block p-3\\" style=",
    ">
      <button
        type=\\"button\\"
        ?disabled=",
    "
        class=",
    "
      >
        <span class=\\"material-icons ",
    "\\">",
    "</span>
        ",
    "
      </button>
    </div>
  ",
  ],
  "values": Array [
    "",
    false,
    "btn btn-icon btn-icon-w-text  ",
    "",
    "edit",
    "Edit",
  ],
}
`;
